feat(text-management): unit & integration tests

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5-mockito</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.30</version>
@@ -98,9 +103,6 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <jvmArgs>-Dnet.bytebuddy.experimental=true</jvmArgs>
-        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
