feat(log): jboss log implementation

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,9 @@ quarkus:
 
   jacoco:
     excludes: ["**/entity/**/*", "**/dto/**/*", "**/repository/**/*", "**/constant/**/*", "**/exception/**/*"]
+
+  log:
+    level: INFO
+    category:
+      org.hibernate:
+        level: INFO
