--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
@@ -143,25 +147,23 @@
         </configuration>
       </plugin>
       <plugin>
-	      <groupId>org.apache.maven.plugins</groupId>
-	      <artifactId>maven-checkstyle-plugin</artifactId>
-	      <version>3.3.1</version>
-	      <configuration>
-	      	<configLocation>checkstyle.xml</configLocation>
-	      	<!-- <encoding>UTF-8</encoding> -->
-	      	<consoleOutput>true</consoleOutput>
-	      	<failsOnError>true</failsOnError>
-	      	<linkXRef>false</linkXRef>
-	      </configuration>
-	      <executions>
-	      	<execution>
-	      		<id>validate</id>
-	      		<phase>validate</phase>
-	      		<goals>
-	      			<goal>check</goal>
-	      		</goals>
-	      	</execution>
-	      </executions>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>3.3.1</version>
+        <executions>
+          <execution>
+            <id>validate</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <configLocation>checkstyle.xml</configLocation>
+          <consoleOutput>true</consoleOutput>
+          <failsOnError>true</failsOnError>
+          <linkXRef>false</linkXRef>
+        </configuration>
       </plugin>
     </plugins>
   </build>
