--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,17 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        
+    
+    - name: Cache Maven dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          maven-${{ runner.os }}-
+
     - name: Install Dependencies
-      run: ./mvnw install -DskipTests
+      run: ./mvnw dependency:resolve
 
   validations:
     runs-on: ubuntu-latest
@@ -34,6 +42,12 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    
+    - name: Restore Maven dependencies cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
 
     - name: Install
       run: ./mvnw install -DskipTests
