feat(ci): add coverage summary

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Validate & Checkstyle
       run: ./mvnw validate
 
-    - name: Tests & Coverage
+    - name: Run Tests
       run: ./mvnw verify
 
     - name: Test Summary
@@ -49,3 +49,11 @@ jobs:
       with:
         paths: "target/surefire-reports/**/TEST-*.xml"
       if: always()
+
+    - name: Coverage Summary
+      run: |
+        missed=$(cat target/jacoco-report/jacoco.xml | grep -oP '<counter type="LINE" missed="\K\d+' | tail -1)
+        covered=$(cat target/jacoco-report/jacoco.xml | grep -oP '<counter type="LINE" missed="\d+" covered="\K\d+' | tail -1)
+        total=$(( $missed + $covered ))
+        percentage=$((($covered * 100) / $total))
+        echo "Coverage: $percentage" >> $GITHUB_STEP_SUMMARY
